welcome.lessons.welcome.variables.Variables.scala.code
var nbP = 0
while (!estSurBiscuit) {
	avance()
	nbP = nbP + 1
}
prendBiscuit
while (!(nbp==0)) {
	recule;
	nbP = nbP - 1
}
